--- a/Module3/Module3A/Node/package.json
+++ b/Module3/Module3A/Node/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "first",
+  "name": "firstNode",
   "version": "1.0.0",
   "description": "This is my first Node ",
-  "main": "index.js",
+  "main": "task 16 index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
