--- a/Module3/Module3A/Node/package.json
+++ b/Module3/Module3A/Node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstNode",
+  "name": "first",
   "version": "1.0.0",
   "description": "This is my first Node ",
   "main": "task 16 index.js",
