--- a/Module3/Module3A/Tasks/package.json
+++ b/Module3/Module3A/Tasks/package.json
@@ -2,7 +2,7 @@
   "name": "first",
   "version": "1.0.0",
   "description": "This is my first Node ",
-  "main": "index.js",
+  "main": "task16index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
