--- a/Module3/Module3A/Tasks/Node/package.json
+++ b/Module3/Module3A/Tasks/Node/package.json
@@ -1,11 +1,11 @@
 {
   "name": "first",
   "version": "1.0.0",
-  "description": "This is my first Node ",
-  "main": "task16index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Aridunnu",
+  "author": "Arydunnu",
   "license": "ISC"
 }
